--- a/lib/dialog/dialog.scss
+++ b/lib/dialog/dialog.scss
@@ -1,14 +1,17 @@
+@import '../_helper.scss';
 .happy-ui-dialog {
   position: fixed;
   background-color: white;
-  width: 15em;
-  height: 10em;
-  padding: 20px;
+  width: 420px;
+  height: 200px;
+  padding: 10px 20px;
   border-radius: 5px;
   top: 50%;
   left: 50%;
   position: fixed;
   transform: translate(-50%, -50%);
+  z-index: 1;
+  color: $text-color;
   &-mask {
     position: absolute;
     top: 0;
@@ -16,5 +19,35 @@
     width: 100%;
     height: 100%;
     background-color: rgba($color: #000000, $alpha: 0.2);
+  }
+  &-header {
+    font-size: 18px;
+    color: $title-color;
+    padding: 8px 16px;
+    border-bottom: 1px solid $border-color;
+  }
+  &-main {
+    padding: 8px 16px;
+    min-height: 6em;
+  }
+  &-footer {
+    padding: 8px 16px;
+    border-top: 1px solid $border-color;
+    display: flex;
+    justify-content: flex-end;
+  }
+  &-close {
+    position: absolute;
+    bottom: 100%;
+    left: 100%;
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    transform: translate(-40px, 40px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    cursor: pointer;
   }
 }
