--- a/src/lib/dialog/dialog.scss
+++ b/src/lib/dialog/dialog.scss
@@ -13,11 +13,11 @@
   z-index: 1;
   color: $text-color;
   &-mask {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background-color: rgba($color: #000000, $alpha: 0.2);
   }
   &-header {
