add button components

--- a/src/lib/__helper.scss
+++ b/src/lib/__helper.scss
@@ -1,4 +1,5 @@
-$main-color: #1890ff;
 $title-color: #000000d9;
 $text-color: #000000d9;
-$border-color: #f0f0f0;
+$padding: 16px;
+$main-color: #9e8bd7;
+$border-color: #f1f1f1;
