--- a/example.scss
+++ b/example.scss
@@ -30,10 +30,7 @@ pre {
 }
 
 @import './node_modules/highlight.js/styles/atom-one-dark.css';
-
-$padding: 16px;
-$main-color: #9e8bd7;
-$border-color: #f1f1f1;
+@import './src/lib/_helper.scss';
 
 body {
   font-size: 16px;
