--- a/src/lib/__helper.scss
+++ b/src/lib/__helper.scss
@@ -1,5 +1,14 @@
 $title-color: #000000d9;
 $text-color: #000000d9;
-$padding: 16px;
 $main-color: #9e8bd7;
 $border-color: #f1f1f1;
+$accents-1: #eaeaea;
+$accents-2: #999;
+$accents-3: #888;
+$accents-4: #666;
+$accents-5: #444;
+$accents-6: #333;
+$accents-7: #111;
+
+$border-radius: 5px;
+$padding: 16px;
